--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "gtfs-realtime-bindings": "^0.0.4",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "twit": "^2.2.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.1"
