--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "gtfs-realtime-bindings": "^0.0.4",
+    "mapbox-gl": "^0.37.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-mapbox-gl": "^1.11.0",
     "twit": "^2.2.5"
   },
   "devDependencies": {
