--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "gtfs-realtime-bindings": "^0.0.4",
     "mapbox-gl": "^0.37.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-icons": "^2.2.5",
     "react-mapbox-gl": "^1.11.0",
-    "twit": "^2.2.5"
+    "react-materialize": "^0.18.4",
+    "react-open-weather-map": "^2.1.3",
+    "twit": "^2.2.5",
+    "xhr": "^2.4.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.1"
